# Ayyad-APIs

./: .gitignore  README.md  pyproject.toml  setup.py
ayyad_apis/: __init__.py  types.py  utils.py
ayyad_apis/alltube_extractor/: __init__.py  core.py
ayyad_apis/pinterest/: __init__.py  core.py
ayyad_apis/porn_detection/: __init__.py  core.py
ayyad_apis/toxicity_detector/: __init__.py  core.py
ayyad_apis/translator/: __init__.py  core.py
ayyad_apis/youtube_suggest/: __init__.py  core.py
ayyad_apis/youtube_to_telegram/: __init__.py  core.py
ayyad_apis/zulvexai/: __init__.py  core.py
